<resources>
    <string name="app_name">QueueApp</string>
    <string name="restaurantName">restaurantName</string>
    <string name="paxRange">paxRange</string>
    <string name="queueCurrent">queueCurrent</string>
    <string name="queueWaiting">queueWaiting</string>
    <string name="check_btn">Check</string>
    <string name="queue_btn">Queue</string>
    <string name="edtTxt_phone_hints">Phone Number</string>
    <string name="submit_btn">Submit</string>
    <string name="queue_btn_inst">Click "Queue" to get a queue ticket</string>
    <string name="check_btn_inst">Click "Check" to check your queue ticket</string>
    <string name="enter">Enter</string>
    <string name="restaurant_id">RESTAURANT ID</string>
    <string name="welcome">Welcome</string>
    <string name="txt_instruction">Instruction</string>
    <string name="textview">TextView</string>
    <string name="login_btn">Login</string>
    <string name="register_btn">Register</string>
    <string name="slotAMin">Min Pax for SlotA</string>
    <string name="slotAMax">Max Pax for SlotA</string>
    <string name="slotALimit">Max Queue Capacity for SlotA</string>
    <string name="slotBMin">Min Pax for SlotB</string>
    <string name="slotBMax">Max Pax for SlotB</string>
    <string name="slotBLimit">Max Queue Capacity for SlotB</string>
    <string name="slotCLimit">Max Queue Capacity for SlotC</string>
    <string name="slotCMax">Max Pax for SlotC</string>
    <string name="slotCMin">Min Pax for SlotC</string>
    <string name="setting_btn">Setting</string>
    <string name="signout_btn">Sign Out</string>
    <string name="call_btn_inst">Click the corresponding button to call a queue ticket!</string>
</resources>