<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="vertical"
    android:fadingEdge="vertical"
    >
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    >

    <TextView
        android:id="@+id/txtRestaurantNameSetting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restaurantName"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtTxtRestaurantNameSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/restaurant_ic"
        android:drawablePadding="5dp"
        android:hint="@string/restaurantName"
        android:inputType="text"
        android:text="sampleName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRestaurantNameSetting" />

    <TextView
        android:id="@+id/txtSlotAMinSetting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slotAMin"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtTxtRestaurantNameSetting" />

    <EditText
        android:id="@+id/edtTxtSlotAMinSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/group_ic"
        android:drawablePadding="5dp"
        android:hint="@string/slotAMin"
        android:inputType="number"
        android:text="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSlotAMinSetting" />

    <TextView
        android:id="@+id/txtSlotAMaxSetting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slotAMax"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtTxtSlotAMinSetting" />

    <EditText
        android:id="@+id/edtTxtSlotAMaxSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/group_ic"
        android:drawablePadding="5dp"
        android:hint="@string/slotAMax"
        android:inputType="number"
        android:text="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSlotAMaxSetting" />

    <TextView
        android:id="@+id/txtSlotALimitSetting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slotALimit"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtTxtSlotAMaxSetting" />


    <EditText
        android:id="@+id/edtTxtSlotALimitSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/capacity_ic"
        android:drawablePadding="5dp"
        android:hint="@string/slotALimit"
        android:inputType="number"
        android:text="20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSlotALimitSetting" />


    <TextView
        android:id="@+id/txtSlotBMinSetting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slotBMin"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtTxtSlotALimitSetting" />

    <EditText
        android:id="@+id/edtTxtSlotBMinSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/group_ic"
        android:drawablePadding="5dp"
        android:hint="@string/slotBMin"
        android:inputType="number"
        android:text="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSlotBMinSetting" />

    <TextView
        android:id="@+id/txtSlotBMaxSetting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slotBMax"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtTxtSlotBMinSetting" />


    <EditText
        android:id="@+id/edtTxtSlotBMaxSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/group_ic"
        android:drawablePadding="5dp"
        android:hint="@string/slotBMax"
        android:inputType="number"
        android:text="4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSlotBMaxSetting" />

    <TextView
        android:id="@+id/txtSlotBLimitSetting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slotBLimit"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtTxtSlotBMaxSetting" />

    <EditText
        android:id="@+id/edtTxtSlotBLimitSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/capacity_ic"
        android:drawablePadding="5dp"
        android:hint="@string/slotBLimit"
        android:inputType="number"
        android:text="20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSlotBLimitSetting" />

    <TextView
        android:id="@+id/txtSlotCMinSetting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slotCMin"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtTxtSlotBLimitSetting" />

    <EditText
        android:id="@+id/edtTxtSlotCMinSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/group_ic"
        android:drawablePadding="5dp"
        android:hint="@string/slotCMin"
        android:inputType="number"
        android:text="5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSlotCMinSetting" />

    <TextView
        android:id="@+id/txtSlotCMaxSetting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slotCMax"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtTxtSlotCMinSetting" />


    <EditText
        android:id="@+id/edtTxtSlotCMaxSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/group_ic"
        android:drawablePadding="5dp"
        android:hint="@string/slotCMax"
        android:inputType="number"
        android:text="6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSlotCMaxSetting" />

    <TextView
        android:id="@+id/txtSlotCLimitSetting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slotCLimit"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtTxtSlotCMaxSetting" />

    <EditText
        android:id="@+id/edtTxtSlotCLimitSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/capacity_ic"
        android:drawablePadding="5dp"
        android:hint="@string/slotCLimit"
        android:inputType="number"
        android:text="20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSlotCLimitSetting" />

    <Button
        android:id="@+id/btnSettingCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cancel"
        app:layout_constraintEnd_toStartOf="@+id/guideline7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtTxtSlotCLimitSetting" />

    <Button
        android:id="@+id/btnSettingSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toBottomOf="@+id/edtTxtSlotCLimitSetting" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="205dp" />
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>